spanish alignemnt fix - homepage -price beat - login bage red banner

--- a/app/design/frontend/Dyode/curacao/Magento_Theme/web/css/source/_home.less
+++ b/app/design/frontend/Dyode/curacao/Magento_Theme/web/css/source/_home.less
@@ -1094,14 +1094,29 @@
 	}
 }
 
-/*Style for spanish*/
+/*styling for Espanol homepage starts here*/
 html[lang="es"] {
-.cms-index-index,.checkout-onepage-success {
-		.guarantee-block-container {
-			.guarantee-block {
-				.wrapper {
-					max-width: 480px;
-				 }
+	.checkout-onepage-success,
+	.cms-index-index {
+		.page-wrapper {
+			.page-main {
+				.columns {
+					.main {
+						.guarantee-block-container {
+							.guarantee-block {
+								.wrapper {
+									max-width: 500px;
+									@media all and (max-width:1050px) {
+										display: flex;
+									}
+									@media all and (max-width:599px) {
+										display: block;
+									}
+								}
+							}
+						}
+					}
+				}
 			}
 		}
 	}
